@@ -1,3 +1,8 @@
+2012-11-17  Romain Francois <romain@r-enthusiasts.com>
+
+        * include/Rcpp/internal/wrap_end.h: have calls to wrap as late as possible
+        so that they "see" all (potentially user defined) overloads of wrap. 
+
 2012-11-16  Romain Francois <romain@r-enthusiasts.com>
 
         * include/Rcpp/vector/Vector.h : added static methods Vector::is_na and
